# RED-ANNS

./: CMakeLists.txt  README.md  build.sh  debug.sh  hosts  hosts.mpi  run.sh  sync.sh  test_with_PQ.sh
app/: deep100M_K4.json  deep10M_query10k_K2.json  deep10M_query10k_K4.json  deep10M_query1M_K2.json  deep10M_query1M_K4.json  laion100M-512D_K4.json  msturing100M_K2.json  msturing100M_K3.json  msturing100M_K4.json  text2image100M_K4.json
app/count1/: 0.json
app/count4/: 0.json  1.json  2.json  3.json
app/count4_query1M/: 0.json  1.json  2.json  3.json
app/deep100M_mapreduce_count4/: 0.json  1.json  2.json  3.json
app/laion100M_mapreduce_count4/: 0.json  1.json  2.json  3.json
app/msturing100M_mapreduce_count4/: 0.json  1.json  2.json  3.json
app/text2image100M_mapreduce_count4/: 0.json  1.json  2.json  3.json
core/: bind.hpp  config.hpp  global.hpp  rdma.hpp
core/store/: cache.hpp  gstore.hpp  vertex.hpp
include/: common.h  distance.h  generate_subgraph.h  hungary.h  index.h  index_bf.h  math_utils.h  neighbor.h  parameters.h  pq.h  util.h
include/efanna2e/: cached_io.h  neighbor.h  util.h
rdma_lib/: pre_connector.hpp  rdma_header.hpp  rdmaio.hpp  utils.hpp
src/: CMakeLists.txt  index.cpp  math_utils.cpp  pq.cpp
tests/: CMakeLists.txt  test_map_reduce.cpp  test_pq.cpp  test_rdma_lat.cpp  test_search_distributed.cpp  test_search_membkt.cpp  test_search_single_node.cpp
utils/: errors.hpp  logger2.hpp
